fix: add new dependecies and init block - Add Firestore CI to ci.yml - Add init block to FirestoreTest.kt

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,6 +108,10 @@ jobs:
           # To run the CI with debug information, add --info
           ./gradlew check --parallel --build-cache
 
+      # Install Firebase CLI
+      - name: Install Firebase CLI
+        run: npm install -g firebase-tools
+
       # Start Firebase emulators for instrumentation tests
       - name: Start Firebase emulators
         run: |
