--- a/app/src/testRelease/AndroidManifest.xml
+++ b/app/src/testRelease/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest package="com.android.wildex" xmlns:android="http://schemas.android.com/apk/res/android">
     <application>
         <activity
-            android:name="androidx.activity.ComponentActivity"
+            android:name="androidx.compose.ui.test.junit4.android.ComposeTestActivity"
             android:exported="false" />
     </application>
 </manifest>
