--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,19 @@
 {
+  "firestore": {
+    "rules": "firebase/firestore/firestore.rules"
+  },
+  "storage": {
+    "rules": "firebase/storage/storage.rules"
+  },
   "emulators": {
     "auth": {
       "port": 9099
     },
     "firestore": {
       "port": 8080
+    },
+    "storage": {
+      "port": 9199
     },
     "ui": {
       "enabled": true
