feat: add mapBox to map screen

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,8 @@ sonar = "4.4.1.3373"
 gms = "4.4.2"
 coil = "2.6.0"
 kotlinx-coroutines = "1.8.1"
+mapbox = "11.15.2"
+
 
 # Firebase
 firebaseAuth = "23.0.0"
@@ -99,6 +101,9 @@ mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockitoCore
 mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "mockitoKotlin" }
 
 compose-material-icons = { module = "androidx.compose.material:material-icons-extended", name = "material-icons-extended" }
+
+mapbox-android = { module = "com.mapbox.maps:android-ndk27", version.ref = "mapbox" }
+mapbox-compose = { module = "com.mapbox.extension:maps-compose-ndk27", version.ref = "mapbox" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
