--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,7 +17,7 @@ gms = "4.4.2"
 coil = "2.6.0"
 kotlinx-coroutines = "1.8.1"
 mapbox = "11.15.2"
-
+accompanist = "0.30.1"
 
 # Firebase
 firebaseAuth = "23.0.0"
@@ -104,6 +104,8 @@ compose-material-icons = { module = "androidx.compose.material:material-icons-ex
 
 mapbox-android = { module = "com.mapbox.maps:android-ndk27", version.ref = "mapbox" }
 mapbox-compose = { module = "com.mapbox.extension:maps-compose-ndk27", version.ref = "mapbox" }
+
+accompanist = {module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanist"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
