--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -1,13 +1,49 @@
-name: CI - Test Runner
+name: Parallel CI - Test Runner
 
 on:
   push:
     branches:
       - main
+
   pull_request:
-    types: [opened, synchronize, reopened]
+    types:
+      - opened
+      - synchronize
+      - reopened
 
 jobs:
+  assemble-apk:
+    name: Assemble APK
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Common Android CI setup
+        uses: ./.github/actions/gradle-setup
+        with:
+          google-services: ${{ secrets.GOOGLE_SERVICES }}
+          local-properties: ${{ secrets.LOCAL_PROPERTIES }}
+          keystore: ${{ secrets.KEYSTORE }}
+
+      - name: Assemble APKs
+        run: ./gradlew assembleDebug assembleDebugAndroidTest --parallel --build-cache
+
+      - name: Upload app-debug APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-debug
+          path: app/build/outputs/apk/debug/app-debug.apk
+          retention-days: 1
+
+      - name: Upload app-debug-androidTest APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-debug-androidTest
+          path: app/build/outputs/apk/androidTest/debug/app-debug-androidTest.apk
+          retention-days: 1
+
   unit-tests:
     name: Unit tests
     runs-on: ubuntu-latest
@@ -17,26 +53,28 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Common Android CI setup
-        uses: ./.github/actions/android-setup
+        uses: ./.github/actions/gradle-setup
         with:
-          use-avd-cache: "true"
           google-services: ${{ secrets.GOOGLE_SERVICES }}
           local-properties: ${{ secrets.LOCAL_PROPERTIES }}
           keystore: ${{ secrets.KEYSTORE }}
 
-      - name: Run Unit tests
-        run: ./gradlew check --parallel --build-cache
+      - name: Run unit tests (debug)
+        run: ./gradlew testDebugUnitTest --parallel --build-cache
 
       - name: Upload unit test coverage
         uses: actions/upload-artifact@v4
         with:
           name: unit-test-coverage
-          path: |
-            app/build/outputs/unit_test_code_coverage/**/testDebugUnitTest.exec
+          path: app/build/outputs/unit_test_code_coverage/**/testDebugUnitTest.exec
+          retention-days: 1
 
   android-tests:
     name: Android tests (matrix)
     runs-on: ubuntu-latest
+    needs:
+      - format-check
+      - assemble-apk
     strategy:
       fail-fast: false
       matrix:
@@ -46,13 +84,51 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Enable KVM group perms
+        run: |
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
+
       - name: Common Android CI setup (with AVD cache)
-        uses: ./.github/actions/android-setup
+        uses: ./.github/actions/gradle-setup
         with:
-          use-avd-cache: "true"
           google-services: ${{ secrets.GOOGLE_SERVICES }}
           local-properties: ${{ secrets.LOCAL_PROPERTIES }}
           keystore: ${{ secrets.KEYSTORE }}
+
+      - name: Download app-debug APK
+        uses: actions/download-artifact@v4
+        with:
+          name: app-debug
+          path: apks/
+
+      - name: Download app-debug-androidTest APK
+        uses: actions/download-artifact@v4
+        with:
+          name: app-debug-androidTest
+          path: apks/
+
+      - name: AVD cache
+        uses: actions/cache@v4
+        id: avd-cache
+        with:
+          path: |
+            ~/.android/avd/*
+            ~/.android/adb*
+          key: avd-34
+
+      - name: create AVD and generate snapshot for caching
+        if: steps.avd-cache.outputs.cache-hit != 'true'
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 34
+          target: google_apis
+          arch: x86_64
+          force-avd-creation: false
+          emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+          disable-animations: false
+          script: echo "Generated AVD snapshot for caching."
 
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
@@ -67,8 +143,6 @@ jobs:
             echo "Firebase emulators not configured, skipping emulator startup..."
           fi
 
-      # Optional: pre-create AVD on cache miss could be added as a separate step/composite if desired
-
       - name: Run Android tests (shard ${{ matrix.shard }})
         uses: reactivecircus/android-emulator-runner@v2
         with:
@@ -78,14 +152,26 @@ jobs:
           force-avd-creation: false
           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: true
-          script: ./gradlew connectedCheck --parallel --build-cache --stacktrace -Pandroid.testInstrumentationRunnerArguments.numShards=3 -Pandroid.testInstrumentationRunnerArguments.shardIndex=${{ matrix.shard }}
+          script: |
+            adb devices
+
+            # Install pre-built APKs
+            adb install -r apks/app-debug.apk
+            adb install -r apks/app-debug-androidTest.apk
+
+            # Run instrumentation with sharding
+            adb shell am instrument -w -e numShards 3 -e shardIndex ${{ matrix.shard }} com.android.wildex.test/androidx.test.runner.AndroidJUnitRunner
+
+            # Pull coverage from app internal storage into the expected path
+            mkdir -p app/build/outputs/code_coverage/debugAndroidTest/connected/shard-${{ matrix.shard }}
+            adb exec-out run-as com.android.wildex cat files/coverage.ec > app/build/outputs/code_coverage/debugAndroidTest/connected/shard-${{ matrix.shard }}/coverage.ec
 
       - name: Upload android test coverage
         uses: actions/upload-artifact@v4
         with:
           name: android-test-coverage-${{ matrix.shard }}
-          path: |
-            app/build/outputs/code_coverage/debugAndroidTest/connected/**/coverage.ec
+          path: app/build/outputs/code_coverage/debugAndroidTest/connected/shard-${{ matrix.shard }}/coverage.ec
+          retention-days: 1
 
   coverage-and-sonar:
     name: JaCoCo & Sonar
@@ -98,9 +184,8 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Common Android CI setup
-        uses: ./.github/actions/android-setup
+        uses: ./.github/actions/gradle-setup
         with:
-          use-avd-cache: "false"
           google-services: ${{ secrets.GOOGLE_SERVICES }}
           local-properties: ${{ secrets.LOCAL_PROPERTIES }}
           keystore: ${{ secrets.KEYSTORE }}
@@ -118,13 +203,9 @@ jobs:
 
       - name: Move coverage into expected build paths
         run: |
-          # Unit test coverage
           mkdir -p app/build/outputs/unit_test_code_coverage/debugUnitTest
-          # If only one exec file, just copy it; if multiple, last copy wins (or use jacocoMerge later)
           find coverage/unit -name "*.exec" -print -exec cp {} app/build/outputs/unit_test_code_coverage/debugUnitTest/testDebugUnitTest.exec \;
 
-          # Android test coverage
-          # Put each .ec into its own subdirectory so it matches 'connected/*/coverage.ec'
           mkdir -p app/build/outputs/code_coverage/debugAndroidTest/connected
           i=0
           while IFS= read -r ec; do
@@ -143,3 +224,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: ./gradlew sonar --parallel --build-cache
+
